--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -54,9 +54,9 @@
       #form {
         width: 85%;
 
-        .error-icon {
-          left: 57%;
-        }
+        // .error-icon {
+        //   left: 57%;
+        // }
       }
     }
   }
